[package]
name = "lib2ddoc"
version = "0.1.0"
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "r2ddoc"
crate-type = ["cdylib", "rlib"] # Creates dynamic lib

[dependencies]
p256 = "0.9.0"
base32 = "0.4.0"
x509-parser = "0.12.0"
rsa = "0.5.0"
sha256 = "1.0.2"
ascii = "1.0.0"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.70"
reqwest = { version = "0.11", features = ["blocking"] }
lazy_static = "1.4.0"

[dev-dependencies]
jpeg-decoder = "0.1.22"
png = "0.17.2"

[build-dependencies]
serde_json = "1.0.70"
